SFDC Automation/src/objects/XML_Structure__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting will hold the Resume Hierarchy that is the tags and related sub tags</description>
    <fields>
        <fullName>Attribute_Value__c</fullName>
        <label>Attribute Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapped_To_Contact_Field__c</fullName>
        <description>This is the corresponding Contact fields that are mapped to resume fields</description>
        <label>Mapped To Contact Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Multiple_Children__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Children</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentTag__c</fullName>
        <label>ParentTag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubTags__c</fullName>
        <description>This will a comma separated list of all the subtags for the current selected tag</description>
        <label>SubTags</label>
        <type>TextArea</type>
    </fields>
    <label>XML Structure</label>
</CustomObject>